# fortivpn-cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SPIKE.md  pyproject.toml
.github/workflows/: ci.yml
contrib/: com.fortivpn.headless.plist  com.fvpnctl.headless.plist
docs/: how-it-works.md
docs/superpowers/specs/: 2026-06-20-fortivpn-cli-via-cdp-design.md
src/fortivpn/: __init__.py  cdp.py  cli.py  controller.py  errors.py  keychain.py  launcher.py
src/fvpnctl/: __init__.py  cdp.py  cli.py  controller.py  errors.py  history.py  keychain.py  launcher.py  monitor.py  spinner.py
tests/: test_cdp.py  test_cli.py  test_controller.py  test_errors.py  test_history.py  test_keychain.py  test_launcher.py  test_monitor.py  test_spinner.py
tests/manual/: test_live.py
