[project]
name = "fortivpn"
version = "0.1.0"
requires-python = ">=3.11"
description = "Control FortiClient IPsec VPN on macOS via the Chrome DevTools Protocol (no GUI automation)."
# Zero runtime dependencies is a hard design requirement: the tool uses only the
# Python standard library (socket, json, urllib, subprocess, argparse). See the
# design spec sections 2 and 8 for the rationale (no third-party attack surface,
# trivially auditable, runs against any stock Python 3.11+).
dependencies = []

[project.scripts]
# cli.py is owned by another agent and does not exist yet; this is metadata only.
forti = "fortivpn.cli:main"

[dependency-groups]
# Installed by default on `uv sync` so the test suite is runnable out of the box.
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fortivpn"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import sorting, UP pyupgrade, B bugbear.
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
