[project]
name = "fvpnctl"
version = "0.1.0"
requires-python = ">=3.11"
readme = "README.md"
description = "Control your FortiClient VPN from the macOS command line (no GUI automation)."
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Michał Pasternak" }]
keywords = ["forticlient", "fortinet", "vpn", "ipsec", "macos", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
# Zero runtime dependencies is a hard design requirement: the tool uses only the
# Python standard library (socket, json, urllib, subprocess, argparse). See the
# design spec sections 2 and 8 for the rationale (no third-party attack surface,
# trivially auditable, runs against any stock Python 3.11+).
dependencies = []

[project.urls]
Homepage = "https://github.com/mpasternak/fortivpn-cli"
Repository = "https://github.com/mpasternak/fortivpn-cli"
Issues = "https://github.com/mpasternak/fortivpn-cli/issues"

[project.scripts]
fvpnctl = "fvpnctl.cli:main"

[dependency-groups]
# Installed by default on `uv sync` so the test suite + lint/format run out of the
# box and reproducibly in CI (ruff is a real dev dep, not relied on from PATH).
dev = ["pytest>=8", "ruff>=0.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fvpnctl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import sorting, UP pyupgrade, B bugbear.
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
