[project]
name = "fvpnctl"
version = "0.2.4"
requires-python = ">=3.11"
readme = "README.md"
description = "Control your FortiClient VPN from the macOS command line."
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Michał Pasternak" }]
keywords = ["forticlient", "fortinet", "vpn", "ipsec", "macos", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
]
# Zero runtime dependencies is a hard design requirement on supported platforms:
# the tool uses only the Python standard library (socket, json, urllib,
# subprocess, argparse). See the design spec sections 2 and 8 for the rationale
# (no third-party attack surface, trivially auditable, runs against any stock
# Python 3.11+).
#
# The single entry below is NOT a real dependency. fvpnctl is macOS-only (it
# drives the FortiClient.app debug port) and has no Windows support, so this is an
# intentionally unsatisfiable requirement gated to win32: on Windows pip/uv/uvx
# fail fast instead of installing something that cannot work. On macOS — and on
# Linux, where CI runs the platform-agnostic mocked test suite — the marker is
# false, so the dependency set stays empty.
#
# IMPORTANT: the constraint pins a PyPA-owned package (setuptools) to an
# impossible version, NOT a made-up package name. A non-existent placeholder name
# would be a dependency-confusion hole: an attacker could register that name on
# PyPI, and then `pip install fvpnctl` on Windows would *succeed* and pull in
# their code instead of failing. No PEP 440 version is < 0, so `setuptools<0` can
# never be satisfied by anyone — setuptools is PyPA-controlled and cannot be
# squatted — making this a permanently safe, unsatisfiable gate. cli.main() also
# refuses to run on win32 as a runtime backstop.
dependencies = [
    "setuptools<0; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/mpasternak/fortivpn-cli"
Repository = "https://github.com/mpasternak/fortivpn-cli"
Issues = "https://github.com/mpasternak/fortivpn-cli/issues"

[project.scripts]
fvpnctl = "fvpnctl.cli:main"

[dependency-groups]
# Installed by default on `uv sync` so the test suite + lint/format run out of the
# box and reproducibly in CI (ruff is a real dev dep, not relied on from PATH).
dev = ["pytest>=8", "ruff>=0.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fvpnctl"]

[tool.uv]
# fvpnctl is macOS-only; CI additionally resolves on Linux to run the mocked,
# platform-agnostic test suite. Restrict universal locking to these so `uv lock`
# does not try (and fail) to resolve the intentionally-unsatisfiable win32 install
# guard declared in [project].dependencies.
environments = ["sys_platform == 'darwin'", "sys_platform == 'linux'"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import sorting, UP pyupgrade, B bugbear.
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
